--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Kristen & Franklin's Wedding</title>
-		<!-- link to main stylesheet -->
+    <head> 
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Kristen & Franklin's Wedding</title>
+	<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
+
+
+    </head>
+    <body>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
@@ -14,15 +19,4 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Kristen & Franklin's Wedding</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+        		<h1>Hi there, I'm Hank Quinlan!</h1>
