--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 	<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 
-
     </head>
     <body>
-		<nav>
+         <nav>
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
     		</ul>
 		</nav>
+	    	<div class="container">
+    		<div class="blurb">
+			<h1>Hi there, I'm Hank Quinlan!</h1>
+		
