--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
+
+
+
+
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Kristen & Franklin's Wedding</title>
+		<title>Hank Quinlan, Horrible Cop</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -10,6 +14,8 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
