--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:lienhartkelsey@gmail.com">email</a></li>
-        		<li><a href="https://github.com/klienha">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/klienha">github.com/klienha</a></li>
 			</ul>
 		</footer>
 	</body>
