--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
----
-layout: default
-title: Kristen & Franklin Wedding
----
-<div class="blurb">
-	<h1>Kristen & Franklin's Wedding</h1>
-	<p>Save the date: March 12th 2023</p>
-</div><!-- /.blurb -->
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Kristen & Franklin's Wedding</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Kristen & Franklin's Wedding</h1>
+				<p>Save the date: March 12th 2023</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:lienhartkelsey@gmail.com">email</a></li>
+        		<li><a href="https://github.com/klienha">github.com/klienha</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
