--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Kristen & Franklin's Wedding</title>
+  <body>
+    <h1>Kristen & Franklin's Wedding</h1>
+    <p>Save the date: March 12th 2023</p>
+  </body>  
+</html>
