--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Kristen & Franklin's Wedding</title>
+    <!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
   <body>
     <h1>Kristen & Franklin's Wedding</h1>
     <p>Save the date: March 12th 2023</p>
