--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="container">
     	<div class="blurb">
     		<h1>Kristen & Franklin's Wedding</h1>
-    			<p>March 12th 2023</p>
+    			<p>March 21st 2023</p>
 	</div><!-- /.blurb -->
 	</div><!-- /.container -->
 	<footer>
