--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     	<div class="blurb">
     		<h1>Kristen & Franklin's Wedding</h1>
     			<p>March 21st 2023</p>
-		<img src="photo.jpg" alt="Lydia Mountain">
+		<img src="file:///C:\Users\Kel\Desktop\photo.jpg" alt="Lydia Mountain">
 	</div><!-- /.blurb -->
 	</div><!-- /.container -->
 	<footer>
