--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     	<div class="blurb">
     		<h1>Kristen & Franklin's Wedding</h1>
     			<p>March 21st 2023</p>
-		<img src="file:///C:\Users\Kel\Desktop\photo.jpg" alt="Lydia Mountain">
+		<img src="https://drive.google.com/uc?export=view&id=1uuDeUPADLY_1L2bYXs-RECeg1wM5TYBA" alt="Lydia Mountain">
+		<br>
+    		<a href="https://drive.google.com/uc?export=download&id=0B6wwyazyzml-OGQ3VUo0Z2thdmc" download>
+        		Download
+   		</a>
 	</div><!-- /.blurb -->
 	</div><!-- /.container -->
 	<footer>
