--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- link to main stylesheet -->
 <link rel="stylesheet" type="text/css" href="/css/main.css">
+<a href="link.html"> text link </a> <!-- link to html -->
 </head>
 
 <body>
