--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 <!-- Top navigation bar -->
 <div class="box" id="navbar">
   <a class="active" href="#home">Home</a>
-  <p style="font-size: 20px; color:#1F9AFE;">
-  <a href="#about">Kristen & Franklin</a></p>
+  <a href="#about">Kristen & Franklin</a>
   <a href="#details">Wedding</a>
   <a href="#RSVP">RSVP</a>
-  
 </div>
 
 <!-- Headers/Home -->
