--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- Top navigation bar -->
 <div class="box" id="navbar">
   <a class="active" href="#home">Home</a>
-  <a href="#about">Kristen & Franklin</a>
+  <a href="about.html">Kristen & Franklin</a>
   <a href="#details">Wedding</a>
   <a href="#RSVP">RSVP</a>
   
