--- a/RSVP.html
+++ b/RSVP.html
@@ -1,1 +1,11 @@
+---
+layout: default
+title: Répondez s'il vous plaît
+---
 
+<!-- RSVP -->
+<div class="blurb">
+<h3>RSVP</h3>
+<!-- Image -->
+<img src="https://cdn3.iconfinder.com/data/icons/mail-43/512/mail-delivery-message-communication-15-512.png" alt="RSVP" class="center" width="500" height="500">
+</div>
