--- a/wedding.html
+++ b/wedding.html
@@ -7,5 +7,5 @@ title: Wedding Details
 <div class="blurb">
 <h2>Wedding Information</h2>
 <!-- Image -->
-<img src="https://www.lydiamountainlodge.com/img-demo/slide-1-pavilion.jpg" alt="Rustic" class="center" width="500" height="500">
+<img src="https://media.lmpm.website/uploads/sites/171/2023/08/background.jpg" alt="Rustic" class="center" width="500" height="500">
 </div>
