--- a/wedding.html
+++ b/wedding.html
@@ -8,5 +8,5 @@ title: Wedding Details
 <h2>Wedding Information</h2>
 <!-- Image -->
 <img src="https://media.lmpm.website/uploads/sites/171/2023/08/background.jpg" alt="Rustic" class="center" width="500" height="500">
-<p>Have a fun time celebrating the wedding on Lydia Mountain in Standardsville, VA!</p>
+<p>Celebrate the special occassion. Have a fun time celebrating the wedding on Lydia Mountain in Standardsville, VA!</p>
 </div>
