--- a/RSVP.html
+++ b/RSVP.html
@@ -8,4 +8,8 @@ title: RSVP
 <h3>RSVP</h3>
 <!-- Image -->
 <img src="https://cdn.shopify.com/s/files/1/1102/6652/products/mail-carrier-birds-1163k_1f7450b2-b8fa-432c-bcbb-52b4097368d4.gif?v=1492626431" alt="RSVP" class="center" width="200" height="500">
+<p>Please click the Email link or manually email lienhartkelsey@gmail.com to RSVP by April 1, 2023.</p>
+<p>Indicate your legal name, residing location, and any +1 requests if needed.</p>
+<p>An response email confirming your attendance to the event will be sent within 3-5 business days.</p>
+<p>For further questions, please refer to the Wedding Information Page or send an email using the Email link.</p>
 </div>
