--- a/wedding.html
+++ b/wedding.html
@@ -9,4 +9,5 @@ title: Wedding Details
 <!-- Image -->
 <img src="https://media.lmpm.website/uploads/sites/171/2023/08/background.jpg" alt="Rustic" class="center" width="500" height="500">
 <p>Celebrate the special occassion. Have a fun time celebrating the wedding on Lydia Mountain in Standardsville, VA!</p>
+<p>The event will proceed from 1PM to 10PM with the ceromony followed by speeches, food, dancing, karaoke, and games. Please wear semiformal attire.</p>
 </div>
